<resources
    xmlns:tools="http://schemas.android.com/tools"
>
    <string name="puzzle_select">Select a puzzle:</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="reveal_puzzle">Reveal Entire Puzzle</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="elapsed_time">Elapsed Time: %1$s</string>
    <string name="preview">Preview</string>
    <string name="general_clue_notes">Free-form notes about clue</string>
    <string name="unknown_hint">(No explicit clue)</string>
    <string name="play_activity_title">%1$s - %2$s -> %3$s</string>
    <string name="puzzles_downloading">Downloading Puzzles</string>
    <string name="puzzles_downloading_from">Downloading Puzzles from %s</string>
    <string name="puzzles_downloaded">New Puzzles Downloaded</string>
    <string name="puzzle_downloaded">Downloaded %1$s</string>
    <string name="puzzles_scraping">Downloading Scrape Puzzles</string>
    <string name="import_fallback_source">Import</string>
    <string name="import_success">Puzzle imported</string>
    <string name="import_failure">Import failed</string>
    <string name="perm_read_desc">Requested on older devices to read saved puzzles.</string>
    <string name="perm_write_desc">Requested on older devices to store puzzles.</string>
    <string name="perm_internet_desc">Required to download puzzles from the internet.</string>
    <string name="perm_access_network_state_desc">Required to limit background download when on mobile data or wifi.</string>
    <string name="perm_boot_desc">Required to (optionally) allow periodic background download of puzzles.</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Un-Archive</string>
    <string name="add_puzzle">Add Puzzle</string>
    <string name="online_sources">Online Sources</string>
    <string name="online_sources_url">https://yourealwaysbe.github.io/forkyz</string>
    <string name="import_puzzle">Import Puzzle</string>
    <string name="download_puzzles">Download Puzzles</string>
    <string name="back">Back</string>
    <string name="no_puzzles_download_or_configure_storage">No puzzles found. Download puzzles with the button below or configure a storage directory in settings.</string>
    <string name="no_puzzles">No puzzles found.</string>
    <string name="unable_to_read_file">Unable to read file %1$s</string>
    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_channel_desc">Notifications about downloaded puzzles</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="internal_storage_description">Currently using internal storage. Puzzles will be deleted when Forkyz is uninstalled.</string>
    <string name="allow_permissions">Allow Permissions</string>
    <string name="please_allow_storage">Please allow writing to storage when prompted. Forkyz needs this permission to store downloaded crossword files and cannot work without it.</string>
    <string name="title_view_archives">Archives</string>
    <string name="title_view_crosswords">Crosswords</string>
    <string name="current_word">Current word</string>
    <string name="anagram_source_lab">Anagram remaining letters</string>
    <string name="anagram_solution_lab">Anagram solution</string>
    <string name="board_lab">Board</string>
    <string name="scratch_lab">Scratch</string>
    <string name="notes_lab">Notes</string>
    <string name="copy_conflict">Copy Conflict</string>
    <string name="transfer_overwrite_warning">Transferring the response conflicts with existing entries. Overwrite anyway?</string>
    <string name="clue_format_no_direction_short">%1$d. %2$s</string>
    <string name="clue_format_across_short">%1$da. %2$s</string>
    <string name="clue_format_down_short">%1$dd. %2$s</string>
    <string name="clue_format_across_long">(across) %1$d. %2$s</string>
    <string name="storage_location">Storage Location</string>
    <string name="storage_location_desc">Configure where Forkyz stores/finds its files. Restart app after change.</string>
    <string name="internal_storage">App Internal Storage</string>
    <string name="select_sources">Select Puzzle Sources</string>
    <string name="daily_crosswords">Daily Crosswords</string>
    <string name="daily_crosswords_desc">Puzzles which update daily.</string>
    <string name="weekly_crosswords">Weekly Crosswords</string>
    <string name="weekly_crosswords_desc">Puzzles which update weekly.</string>
    <string name="experimental_sources">Experimental Sources</string>
    <string name="experimental_sources_desc">May or may not function correctly.</string>
    <string name="fit_screen_start">Fit to screen when starting</string>
    <string name="fit_screen_start_desc">Best-fits the puzzle when you start.</string>
    <string name="automatic_download">Automatic Download</string>
    <string name="automatic_download_desc">Download today\'s puzzles when starting the application</string>
    <string name="background_download">Download new puzzles in background</string>
    <string name="background_download_desc">Periodically download new puzzles in the background, even when Forkyz is not in use.</string>
    <string name="background_download_opts">Background Download Options</string>
    <string name="background_download_opts_desc">Configure background downloads.</string>
    <string name="no_download_notifs">No Download Notifications</string>
    <string name="no_download_notifs_desc">Prevents a notification for each puzzle downloaded from appearing in the notifications list.</string>
    <string name="no_hint_highlighting">No Hint Highlighting</string>
    <string name="no_hint_highlighting_desc">Prevents the pink boxes indicating \'hints\' in the form of reveals or show errors.</string>
    <string name="delete_on_cleanup">Delete on Cleanup</string>
    <string name="delete_on_cleanup_desc">Delete rather than archive old puzzles</string>
    <string name="cleanup_unfinished">Cleanup Unfinished</string>
    <string name="cleanup_unfinished_desc">Determines how old an unfinished puzzle must be before it is archived/deleted.</string>
    <string name="cleanup_archives">Cleanup Archives</string>
    <string name="cleanup_archives_desc">Determines how old an archived puzzle must be before it is deleted.</string>
    <string name="keyboard_showhide">Show/Hide In-App Keyboard</string>
    <string name="keyboard_showhide_desc">The show/hide behaviour of the in-app keyboard.</string>
    <string name="snap_current">Snap to Current Word</string>
    <string name="snap_current_desc">Toggles the auto-scrolling of the playboard to the current play position</string>
    <string name="show_length">Show Length</string>
    <string name="show_length_desc">Shows the number of letters in the answer on the clue line</string>
    <string name="scroll_to_clue">Scroll To Clue</string>
    <string name="scroll_to_clue_desc">Toggles the auto-scrolling to the selected clue in the clues list. (Works like Forkyz 1)</string>
    <string name="movement_style">Movement Style</string>
    <string name="movement_style_desc">Select what happens when you type past the end of a word.</string>
    <string name="skip_filled">Skip Filled Boxes</string>
    <string name="skip_filled_desc">Toggles the skipping of filled boxes when you enter a new letter.</string>
    <string name="preserve_correct">Preserve Correct Boxes when Showing Errors</string>
    <string name="preserve_correct_desc">Keeps you from overwriting a correct box when you are in \'Show Errors\' mode.</string>
    <string name="space_change_dir">Space Changes Direction</string>
    <string name="space_change_dir_desc">Spacebar changed direction rather than blanking the box.</string>
    <string name="enter_changes_direction">Enter Changes Direction</string>
    <string name="enter_changes_direction_desc">Enter changes direction rather than moving to the next clue.</string>
    <string name="double_tap_zoom">Double Tap Fit to Screen</string>
    <string name="double_tap_zoom_desc">Double tap changes zoom to fit to screen.</string>
    <string name="show_timer">Show Timer</string>
    <string name="show_timer_desc">Shows your puzzle time.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="full_screen">Full Screen</string>
    <string name="full_screen_desc">Hides the notification bar.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="orientation_lock">Orientation Lock</string>
    <string name="orientation_lock_desc">Locks the screen location</string>
    <string name="disable_swipe">Disable Swipe</string>
    <string name="disable_swipe_desc">Disables swiping to dismiss on the list view.</string>
    <string name="swipe_action">Swipe Action</string>
    <string name="swipe_action_desc">Select delete or archive on swipe</string>
    <string name="display_scratch">Display Scratch</string>
    <string name="display_scratch_desc">Display scratch notes on play board.</string>
    <string name="dont_delete_crossing">Don\'t delete crossing words</string>
    <string name="dont_delete_crossing_desc">When deleting, don\'t delete a letter if it is part of a filled-in crossing word</string>
    <string name="about_forkyz">About Forkyz</string>
    <string name="release_notes">Release Notes</string>
    <string name="license">License</string>
    <string name="updates_mon_fri">Updates Monday-Friday</string>
    <string name="updates_mon_sat">Updates Monday-Saturday</string>
    <string name="guardian_daily">Guardian Daily Cryptic</string>
    <string name="independent_daily">Independent Daily Cryptic</string>
    <string name="newsday">Newsday</string>
    <string name="lat_crosswords">Los Angeles Times</string>
    <string name="universal_crossword">Universal Crossword</string>
    <string name="usa_today">USA Today</string>
    <string name="cru_puzzle_workshop">Cru Puzzle Workshop</string>
    <string name="cru_puzzle_workshop_desc">NYT Cru Cryptic Fan Puzzles\nhttps://archive.nytimes.com/www.nytimes.com/premium/xword/cryptic-archive.html\n(Please Read the help item below)</string>
    <string name="keglars_cryptics">Kegler\'s Kryptics</string>
    <string name="keglars_cryptics_desc">Ron &quot;Kegler&quot; Sweet\'s Cryptic Archive\nhttps://kegler.gitlab.io/Block_style/index.html\n(Please Read the help item below)</string>
    <string name="about_scrapes">About These Sources</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="clues">Clues</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_in_max">Zoom In Max</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="zoom_reset">Zoom Reset</string>
    <string name="clue_text_size">Clue Text Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="show_errors">Show Errors</string>
    <string name="scratch_mode">Scratch Mode</string>
    <string name="reveal">Reveal</string>
    <string name="letter">Letter</string>
    <string name="word">Word</string>
    <string name="errors">Errors</string>
    <string name="puzzle">Puzzle</string>
    <string name="info">Info</string>
    <string name="puzzle_title">Title of Puzzle</string>
    <string name="by_author">By Author</string>
    <string name="copyright_info">Copyright Info</string>
    <string name="elapsed_time_labelled_dummy">Elapsed Time: X:XX</string>
    <string name="puzzle_notes">Puzzle notes.</string>
    <string name="keyboard_show_sparingly">Show sparingly</string>
</resources>