<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.preference.PreferenceCategory
        android:title="@string/storage_location"
    >
        <androidx.preference.ListPreference
            android:title="@string/storage_location"
            android:summary="@string/storage_location_desc"
            android:key="storageLocation"
            android:defaultValue="@string/internal_storage"
            android:entries="@array/storageLocations"
            android:entryValues="@array/storageLocations"
        />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/select_sources"
    >
        <!-- Organized alphabetically and by category. -->
        <androidx.preference.Preference
            android:title="@string/daily_crosswords"
            android:summary="@string/daily_crosswords_desc"
            android:key="selectDaily"
            app:fragment="app.crossword.yourealwaysbe.PreferencesDailyFragment"
        />
        <androidx.preference.Preference
            android:title="@string/weekly_crosswords"
            android:summary="@string/weekly_crosswords_desc"
            android:key="selectWeekly"
            app:fragment="app.crossword.yourealwaysbe.PreferencesWeeklyFragment"
        />
        <androidx.preference.Preference
            android:title="@string/experimental_sources"
            android:summary="@string/experimental_sources_desc"
            android:key="selectExperimental"
            app:fragment="app.crossword.yourealwaysbe.PreferencesExperimentalFragment"
        />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/application_settings"
    >

        <androidx.preference.CheckBoxPreference
            android:title="@string/fit_screen_start"
            android:defaultValue="false"
            android:summary="@string/fit_screen_start_desc"
            android:key="fitToScreen"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/automatic_download"
            android:defaultValue="true"
            android:summary="@string/automatic_download_desc"
            android:key="dlOnStartup"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/background_download"
            android:summary="@string/background_download_desc"
            android:key="backgroundDownload"
            android:defaultValue="false"
        />

        <androidx.preference.Preference
            android:title="@string/background_download_opts"
            android:summary="@string/background_download_opts_desc"
            android:dependency="backgroundDownload"
            android:key="backgroundDownloadOptions"
            app:fragment="app.crossword.yourealwaysbe.PreferencesDownloadFragment"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/no_download_notifs"
            android:defaultValue="false"
            android:summary="@string/no_download_notifs_desc"
            android:key="supressMessages"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/no_hint_highlighting"
            android:defaultValue="false"
            android:summary="@string/no_hint_highlighting_desc"
            android:key="supressHints"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/delete_on_cleanup"
            android:defaultValue="false"
            android:summary="@string/delete_on_cleanup_desc"
            android:key="deleteOnCleanup"
        />

        <androidx.preference.ListPreference
            android:title="@string/cleanup_unfinished"
            android:summary="@string/cleanup_unfinished_desc"
            android:key="cleanupAge"
            android:defaultValue="2"
            android:entries="@array/cleanupAgeLabels"
            android:entryValues="@array/cleanupAgeValues"
        />

        <androidx.preference.ListPreference
            android:title="@string/cleanup_archives"
            android:summary="@string/cleanup_archives_desc"
            android:key="archiveCleanupAge"
            android:defaultValue="-1"
            android:entries="@array/cleanupAgeLabels"
            android:entryValues="@array/cleanupAgeValues"
        />

        <androidx.preference.ListPreference
            android:title="@string/keyboard_showhide"
            android:summary="@string/keyboard_showhide_desc"
            android:key="keyboardShowHide"
            android:defaultValue="@string/keyboard_show_sparingly"
            android:entries="@array/keyboardShowHideLabels"
            android:entryValues="@array/keyboardShowHideValues"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/snap_current"
            android:defaultValue="true"
            android:summary="@string/snap_current_desc"
            android:key="ensureVisible"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/show_length"
            android:defaultValue="false"
            android:summary="@string/show_length_desc"
            android:key="showCount"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/scroll_to_clue"
            android:defaultValue="false"
            android:summary="@string/scroll_to_clue_desc"
            android:key="snapClue"
        />

        <androidx.preference.ListPreference
            android:title="@string/movement_style"
            android:summary="@string/movement_style_desc"
            android:key="movementStrategy"
            android:defaultValue="MOVE_NEXT_ON_AXIS"
            android:entries="@array/movementStrategyLabels"
            android:entryValues="@array/movementStrategyValues"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/skip_filled"
            android:defaultValue="false"
            android:summary="@string/skip_filled_desc"
            android:key="skipFilled"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/preserve_correct"
            android:defaultValue="false"
            android:summary="@string/preserve_correct_desc"
            android:key="preserveCorrectLettersInShowErrors"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/space_change_dir"
            android:defaultValue="true"
            android:summary="@string/space_change_dir_desc"
            android:key="spaceChangesDirection"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/enter_changes_direction"
            android:defaultValue="true"
            android:summary="@string/enter_changes_direction_desc"
            android:key="enterChangesDirection"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/double_tap_zoom"
            android:defaultValue="false"
            android:summary="@string/double_tap_zoom_desc"
            android:key="doubleTap"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/show_timer"
            android:defaultValue="false"
            android:summary="@string/show_timer_desc"
            android:key="showTimer"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/full_screen"
            android:defaultValue="false"
            android:summary="@string/full_screen_desc"
            android:key="fullScreen"
        />

        <androidx.preference.ListPreference
            android:title="@string/orientation_lock"
            android:summary="@string/orientation_lock_desc"
            android:key="orientationLock"
            android:defaultValue="UNLOCKED"
            android:entries="@array/orientationLockLabels"
            android:entryValues="@array/orientationLockValues"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/disable_swipe"
            android:defaultValue="false"
            android:summary="@string/disable_swipe_desc"
            android:key="disableSwipe"
        />

        <androidx.preference.ListPreference
            android:title="@string/swipe_action"
            android:summary="@string/swipe_action_desc"
            android:key="swipeAction"
            android:defaultValue="DELETE"
            android:entries="@array/swipeActionLabels"
            android:entryValues="@array/swipeActionValues"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/display_scratch"
            android:defaultValue="false"
            android:summary="@string/display_scratch_desc"
            android:key="displayScratch"
        />

        <androidx.preference.CheckBoxPreference
            android:title="@string/dont_delete_crossing"
            android:defaultValue="true"
            android:summary="@string/dont_delete_crossing_desc"
            android:key="dontDeleteCrossing"
        />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/about_forkyz"
    >

        <androidx.preference.Preference
            android:title="@string/release_notes"
            android:key="releaseNotes"
        />

        <androidx.preference.Preference
            android:title="@string/license"
            android:key="license"
        />

    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
