<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
>

    <item
        android:id="@+id/play_menu_clues"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/clues"
    />
    <item
        android:id="@+id/play_menu_notes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/notes"
    />
    <item
        android:id="@+id/play_menu_zoom"
        android:title="@string/zoom"
    >
        <menu>
            <item
                android:id="@+id/play_menu_zoom_in"
                android:title="@string/zoom_in"
            />
            <item
                android:id="@+id/play_menu_zoom_in_max"
                android:title="@string/zoom_in_max"
            />
            <item
                android:id="@+id/play_menu_zoom_out"
                android:title="@string/zoom_out"
            />
            <item
                android:id="@+id/play_menu_zoom_fit"
                android:title="@string/fit_to_screen"
            />
            <item
                android:id="@+id/play_menu_zoom_reset"
                android:title="@string/zoom_reset"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_clue_size"
        android:title="@string/clue_text_size"
    >
        <menu>
            <item
                android:id="@+id/play_menu_clue_size_s"
                android:title="@string/small"
            />
            <item
                android:id="@+id/play_menu_clue_size_m"
                android:title="@string/medium"
            />
            <item
                android:id="@+id/play_menu_clue_size_l"
                android:title="@string/large"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_show_errors"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/show_errors"
        android:checkable="true"
    />
    <item
        android:id="@+id/play_menu_scratch_mode"
        android:title="@string/scratch_mode"
        android:checkable="true"
    />
    <item
        android:id="@+id/play_menu_reveal"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/reveal"
    >
        <menu>
            <item
                android:id="@+id/play_menu_reveal_letter"
                android:title="@string/letter"
            />
            <item
                android:id="@+id/play_menu_reveal_word"
                android:title="@string/word"
            />
            <item
                android:id="@+id/play_menu_reveal_errors"
                android:title="@string/errors"
            />
            <item
                android:id="@+id/play_menu_reveal_puzzle"
                android:title="@string/puzzle"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info"
    />
    <item
        android:id="@+id/play_menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
    />
    <item
        android:id="@+id/play_menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
    />
</menu>
