<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    android:title="@string/daily_crosswords"
    android:summary="@string/daily_crosswords_desc"
    android:key="selectDaily"
>
    <androidx.preference.CheckBoxPreference
        android:title="@string/guardian_daily"
        android:summary="@string/updates_mon_fri"
        android:defaultValue="true"
        android:key="downloadGuardianDailyCryptic"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/independent_daily"
        android:defaultValue="true"
        android:key="downloadIndependentDailyCryptic"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/newsday"
        android:defaultValue="true"
        android:key="downloadNewsday"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/lat_crosswords"
        android:defaultValue="true"
        android:key="downloadLat"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/universal_crossword"
        android:defaultValue="true"
        android:key="downloadUniversal"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/usa_today"
        android:defaultValue="true"
        android:summary="@string/updates_mon_sat"
        android:key="downloadUSAToday"
    />
</androidx.preference.PreferenceScreen>
